= vasputils changelog

== Master (for 0.0.2)
  - Make a namespace 'Mageo'.
  - Most of classes are included into the namespace 'Mageo'.

== Version (for 0.0.1)
  - Change indent style from tab char to two spaces.
  - Adjust to malge 0.0.2.

== Version 0.0.0